[package]
name = "wgpu-tutorial"
version = "0.1.0"
authors = ["Kaiser <cegara81@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
#shaderc = "0.6"     # Para usar lenguaje de shaders GLSL y no directamente SPIR-V. No lo necesitamos si usamos [build-dependencies], porque hacemos con eso la conversion.
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
#wgpu = "0.6"    # Si necesitamos portabilidad a Vulkan lo especificamos a parte
futures = "0.3"

[dependencies.wgpu]
version = "0.6"
features = ["vulkan-portability"]

# Utilizamos esta seccion para construir cosas en tiempo de compilacion con build.rs
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"